--- a/src/templates/nrfcfg.yaml.j2
+++ b/src/templates/nrfcfg.yaml.j2
@@ -12,7 +12,7 @@ configuration:
   nfProfileExpiryEnable: true
   sbi:
     bindingIPv4: 0.0.0.0
-    port: 29510
+    port: {{ nrf_sbi_port }}
     registerIPv4: nrf
     scheme: http
   serviceNameList:
