Uses IP instead of URL for registerIPv4 config

--- a/src/templates/nrfcfg.yaml.j2
+++ b/src/templates/nrfcfg.yaml.j2
@@ -10,7 +10,7 @@ configuration:
   sbi:
     bindingIPv4: 0.0.0.0
     port: {{ nrf_sbi_port }}
-    registerIPv4: nrf
+    registerIPv4: {{ nrf_ip }}
     scheme: http
   serviceNameList:
   - nnrf-nfm
