[Feat] Implements certificates interface

--- a/src/templates/nrfcfg.yaml.j2
+++ b/src/templates/nrfcfg.yaml.j2
@@ -11,7 +11,7 @@ configuration:
     bindingIPv4: 0.0.0.0
     port: {{ nrf_sbi_port }}
     registerIPv4: {{ nrf_ip }}
-    scheme: http
+    scheme: {{ scheme }}
   serviceNameList:
   - nnrf-nfm
   - nnrf-disc
